--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 
 <body>
     <div id="container">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>/</button>
-        <button>=</button>
-        <button>Clear</button>
+        <div class="display"></div>
+        <div class="buttons">
+            <button class="clear">Clear</button>
+            <button class="delete">Delete</button>
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="zero">0</button>
+            <button class="plus">+</button>
+            <button class="minus">-</button>
+            <button class="product">*</button>
+            <button class="division">/</button>
+            <button class="equals">=</button>
+        </div>
+
+
     </div>
     <script src="calculator.js"></script>
 </body>
