--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
     <div id="container">
         <div class="display"></div>
         <div class="buttons">
-            <button class="clear">Clear</button>
-            <button class="delete">Delete</button>
-            <button class="one">1</button>
-            <button class="two">2</button>
+            <button class="clear">A/C</button>
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
             <button class="three">3</button>
             <button class="four">4</button>
             <button class="five">5</button>
             <button class="six">6</button>
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
             <button class="zero">0</button>
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="equals">=</button>
             <button class="plus">+</button>
             <button class="minus">-</button>
             <button class="product">*</button>
             <button class="division">/</button>
-            <button class="equals">=</button>
         </div>
 
 
