--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
 
 <body>
     <div id="container">
-        <div class="display"></div>
+        <div class="display">0</div>
         <div class="buttons">
             <button class="clear">A/C</button>
+            <button class="toggle">+/-</button>
+            <button class="percentage">%</button>
+            <button class="division">/</button>
             <button class="seven">7</button>
             <button class="eight">8</button>
             <button class="nine">9</button>
-            <button class="three">3</button>
+            <button class="product">*</button>
             <button class="four">4</button>
             <button class="five">5</button>
             <button class="six">6</button>
-            <button class="zero">0</button>
+            <button class="minus">-</button>
             <button class="one">1</button>
             <button class="two">2</button>
-            <button class="equals">=</button>
+            <button class="three">3</button>
             <button class="plus">+</button>
-            <button class="minus">-</button>
-            <button class="product">*</button>
-            <button class="division">/</button>
+            <button class="zero">0</button>
+            <button class="decimal">.</button>
+            <button class="equals">=</button>
         </div>
-
-
     </div>
     <script src="calculator.js"></script>
 </body>
